<resources>
    <string name="app_name">Futsal</string>
    <string name="welcome_message">Welkom aan de pre-pre-pre-alpha van de futsal app.</string>
    <string name="start_prompt">Om te beginnen druk op de grote start knop. Zoals te verwachten.</string>
    <string name="start">START</string>
    <string name="next">CONTINUE</string>
    <string name="new_player">NEW PLAYER</string>
    <string name="added_players">Added players, don\'t add keeper</string>
    <string name="substitution_match_explanation">Substitutions: all at 5 mins</string>
    <string name="in">IN</string>
    <string name="out">OUT</string>
    <string name="existing_player">EXISTING PLAYER</string>
    <string name="home_team_goal_add">new goal</string>
    <string name="opponent_team_goal_add">opponent</string>
    <string name="add_substitution">Add sub</string>
    <string name="timer_start_prompt">Click to start</string>
    <string name="channel_name">substitutions</string>
    <string name="channel_description">Get notifications when a substitute should happen</string>

</resources>
