<?xml version="1.0" encoding="utf-8"?>
<!--Todo Beautify and add a way to see all the different kind of apps-->
<!--Todo make a menu that slides out to the left for easy navigation-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_prompt"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:text="@string/start"
            android:id="@+id/startButton"
            android:onClick="start"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="HandlerTest"
            android:onClick="handlerTest"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>